Centered alignment of text in side navigation - sort of fixed the picture alignment (still not perfect)

--- a/src/style.css
+++ b/src/style.css
@@ -791,9 +791,15 @@ img{
     margin: 20px;
     position: relative;
     text-align: center;
-
-
+}
+.sidebarcontainers{
+    margin: 2px;
+    position: relative;
+    text-align:center;
 
 }
+
+
+
  
 
